--- a/less/mixins.less
+++ b/less/mixins.less
@@ -37,6 +37,12 @@
     list-style-type: none;
   }
 }
+.clear-area() {
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
 
 
 // Position
