--- a/less/variables.less
+++ b/less/variables.less
@@ -19,11 +19,13 @@
 @borderColorDark: darken(@borderColor, 25%);
 
 @colorPrimary:    #3498db;
-@stateHover:      #eee;
-@stateActive:     yellow;
+@stateDefault:    #fff;
+@stateHover:      #f5f5f5;
+@stateActive:     #eee;
 
 @colorLight:      #fff;
 @colorDark:       #000;
+
 @colorBlue:       rgb(90, 198, 255);
 @colorPink:       rgb(255, 130, 130);
 @colorGreen:      rgb(160, 236, 111);
