--- a/less/components.less
+++ b/less/components.less
@@ -8,8 +8,9 @@
         th, td {
             background: #fff;
             border: 1px solid @borderColor;
-            text-align: left;
+            color: @bodyColor;
             padding: @margin/4 @margin/2;
+            text-align: left;
         }
     }
 }
