--- a/less/misc.less
+++ b/less/misc.less
@@ -466,6 +466,7 @@ a {
 }
 .ui-widget-header {
     .clear-area;
+    color: @bodyColor;
     .ui-state-hover {
         background: @stateHover;
     }
