Updated Featured Roadman. Introduced new components. Added new widgets such as menus.

--- a/css/agiletoolkit-custom.less
+++ b/css/agiletoolkit-custom.less
@@ -78,3 +78,21 @@ strong {
 	background: lighten(@smoke, 4%);
 	border: 1px solid @smoke;
 }
+
+
+// Examples
+#example-swatches, #example-effects {
+	text-align: center;
+	.row>div>div {
+		height: 96px;
+		width: 100%;
+	}
+}
+#example-icons {
+	#icons-toggle {
+
+	}
+	#icons-library {
+		display: none;
+	}
+}
