--- a/less/components.less
+++ b/less/components.less
@@ -7,7 +7,7 @@
         width: 100%;
         th, td {
             background: #fff;
-            border: 1px solid @borderColor;
+            border: 1px solid @borderStatic;
             color: @bodyColor;
             padding: @margin/4 @margin/2;
             text-align: left;
