--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,7 +10,7 @@
 
 
 
-// Helpers
+// Clearers
 // --------------------------------------------------------
 .clear-fix() {
   *zoom: 1;
@@ -199,6 +199,13 @@
        -o-transform: @arguments;
           transform: @arguments;
 }
+.transform-origin(@arguments) {
+  -webkit-transform-origin: @arguments;
+     -moz-transform-origin: @arguments;
+      -ms-transform-origin: @arguments;
+       -o-transform-origin: @arguments;
+          transform-origin: @arguments;
+}
 .rotate(@degrees) {
   -webkit-transform: rotate(@degrees);
      -moz-transform: rotate(@degrees);
@@ -213,13 +220,6 @@
        -o-transform: scale(@x, @y);
           transform: scale(@x, @y);
 }
-.translate(@x, @y) {
-  -webkit-transform: translate(@x, @y);
-     -moz-transform: translate(@x, @y);
-      -ms-transform: translate(@x, @y);
-       -o-transform: translate(@x, @y);
-          transform: translate(@x, @y);
-}
 .skew(@x, @y) {
   -webkit-transform: skew(@x, @y);
      -moz-transform: skew(@x, @y);
@@ -228,22 +228,20 @@
           transform: skew(@x, @y);
   -webkit-backface-visibility: hidden; // See https://github.com/twitter/bootstrap/issues/5319
 }
+.translate(@x, @y) {
+  -webkit-transform: translate(@x, @y);
+     -moz-transform: translate(@x, @y);
+      -ms-transform: translate(@x, @y);
+       -o-transform: translate(@x, @y);
+          transform: translate(@x, @y);
+}
 .translate3d(@x, @y, @z) {
   -webkit-transform: translate3d(@x, @y, @z);
      -moz-transform: translate3d(@x, @y, @z);
        -o-transform: translate3d(@x, @y, @z);
           transform: translate3d(@x, @y, @z);
 }
-#rotate {
-  .clockwise () {
-    from { .rotate(0deg); }
-    to { .rotate(360deg); }
-  }
-  .anti-clockwise () {
-    from { .rotate(0deg); }
-    to { .rotate(-360deg); }
-  }
-}
+
 
 // Animations
 .animation(@arguments) {
@@ -349,6 +347,17 @@
 // ==========================================================
 // Loader
 // ==========================================================
+#rotate {
+  .clockwise () {
+    from { .rotate(0deg); }
+    to { .rotate(360deg); }
+  }
+  .anti-clockwise () {
+    from { .rotate(0deg); }
+    to { .rotate(-360deg); }
+  }
+}
+
 @-webkit-keyframes rotate-i1 {#rotate > .clockwise;}
    @-moz-keyframes rotate-i1 {#rotate > .clockwise;}
     @-ms-keyframes rotate-i1 {#rotate > .clockwise;}
