--- a/less/variables.less
+++ b/less/variables.less
@@ -1,44 +1,45 @@
 // Typography
-@bodyFamily:          "Helvetica Neue", "Helvetica", @jui-ffDefault;
-@bodyColor:           #000;
-@bodySize:            0.875rem; /* 14px */
-@bodyBaseline:        1.618; /* 24px */
+@bodyFamily:           "Helvetica Neue", "Helvetica", @jui-ffDefault;
+@bodyColor:            #000;
+@bodySize:             0.875rem; /* 14px */
+@bodyBaseline:         1.618; /* 24px */
 
-@headingColor:        #000;
-@headingFamily:       "Helvetica Neue", "Helvetica", @jui-ffDefault;
+@headingColor:         #000;
+@headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
 
 
 // General
 @margin: 1rem * @bodyBaseline;
 
 // Colors
-@linkColor:       blue;
-@linkColorHover:  red;
+@linkColor:            blue;
+@linkColorHover:       red;
 
-@borderColor:     #eee;
-@borderColorDark: darken(@borderColor, 25%);
+@borderStatic:         #e1e1e1;
+@borderClickable:      #c1c1c1;
+@borderOverlay:        darken(@borderStatic, 25%);
 
-@colorPrimary:    #3498db;
-@stateDefault:    #fff;
-@stateHover:      #f5f5f5;
-@stateActive:     #eee;
+@colorPrimary:         #3498db;
+@stateDefault:         #fff;
+@stateHover:           #f5f5f5;
+@stateActive:          #eee;
 
-@colorLight:      #fff;
-@colorDark:       #000;
+@colorLight:           #fff;
+@colorDark:            #000;
 
-@colorBlue:       rgb(90, 198, 255);
-@colorPink:       rgb(255, 130, 130);
-@colorGreen:      rgb(160, 236, 111);
-@colorYellow:     rgb(253, 235, 117);
-@colorLightGray:  rgb(241, 241, 242);
+@swatch1:              rgb(90, 198, 255);
+@swatch2:              rgb(255, 130, 130);
+@swatch3:              rgb(160, 236, 111);
+@swatch4:              rgb(253, 235, 117);
+@swatch5:              rgb(241, 241, 242);
 
-@effectSuccess:   #ccffdb;
-@effectWarning:   #fcffcc;
-@effectDanger:    #ffcccc;
-@effectInfo:      #cceeff;
+@effectSuccess:        #ccffdb;
+@effectWarning:        #fcffcc;
+@effectDanger:         #ffcccc;
+@effectInfo:           #cceeff;
 
 
-@import "jui-variables.less";
+@import                "jui-variables.less";
 
 
 // ========================================================
