--- a/less/misc.less
+++ b/less/misc.less
@@ -20,6 +20,9 @@
 // Components
 // ==========================================================
 
+.atk-text-nowrap {
+    white-space: nowrap;
+}
 .atk-halfpush {
     margin-bottom: @margin/2;
 }
