--- a/less/misc.less
+++ b/less/misc.less
@@ -263,7 +263,7 @@ input[type=submit] {
         display: table-cell;
         vertical-align: top;
     }
-    .atk-media img {
+    .atk-media>img {
         display: block;
     }
     .atk-media + .atk-content {
