--- a/less/variables-recover.less
+++ b/less/variables-recover.less
@@ -5,8 +5,8 @@
 @bodyBaseline:         1.618; /* 24px */
 
 @headingColor:         #000;
-@headingFamily:        "Roboto", "Helvetica Neue", "Helvetica", @jui-ffDefault;
-@headingWeight: 	   300;
+@headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
+@headingWeight: 	   400;
 
 
 // General
@@ -28,11 +28,11 @@
 @colorLight:           #fff;
 @colorDark:            #000;
 
-@swatch1:              #bf1313;
-@swatch2:              #14cc76;
-@swatch3:              #0a6666;
-@swatch4:              #0d171a;
-@swatch5:              #dee8e3;
+@swatch1:              rgb(90, 198, 255);
+@swatch2:              rgb(255, 130, 130);
+@swatch3:              rgb(160, 236, 111);
+@swatch4:              rgb(253, 235, 117);
+@swatch5:              rgb(241, 241, 242);
 
 @effectSuccess:        #ccffdb;
 @effectWarning:        #fcffcc;
