--- a/less/typography.less
+++ b/less/typography.less
@@ -3,7 +3,7 @@
 // ==========================================================
 
 html {
-    font-family: @fontFamily;
+    font-family: @bodyFamily;
     font-size: 100%; /* 16 px */ 
     line-height: @bodyBaseline;
 }
@@ -19,7 +19,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: @headingFamily;
-    font-weight: 500;
+    font-weight: @headingWeight;
     line-height: 1;
     text-rendering: optimizeLegibility; /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
     margin: @margin*1.5 0 @margin/2 0;
